--- a/index.html
+++ b/index.html
@@ -9,29 +9,61 @@
 </head>
 <body>
     <header>
-        <p>The header</p>
+      <div class="headerObjects">
+   <h1>logo</h1>
+   <p>icon </p>
+   <p>list</p>
+   </div>
     </header>
 <section class="mainInfo">
  <div class="sectionOne">
-    <p>sectionOne</p>
+   <div class="titleBox">
+<h2 class="titleOfPage">Title Of The Page</h2>
+<p>a quick description of the page and mote text </p>
+   </div>
+   
  </div>
  <div class="sectionTwo">
-    <p>sectionTwo</p>
+    <p></p>
  </div>
  <div class="sectionThree">
-    <p>sectionThree</p>
+    <p></p>
  </div>
  <div class="sectionFour">
-    <p>sectionFour</p>
+    <p></p>
  </div>
  <div class="sectionFive">
-    <p>sectionFive</p>
+    <p></p>
  </div>
 
 </section>
 
 <footer> 
-    <p>the footer</p>
+ <div>
+   <p>About us</p>
+   <p>About us</p>
+   <p>About us</p>
+   <p>About us</p>
+
+   
+</div>
+<div>
+  <p>More Info</p>
+  <p>More Info</p>
+  <p>More Info</p>
+  <p>More Info</p>
+
+</div>
+<div>
+  <p> Connect</p>
+  <p> Connect</p>
+  <p> Connect</p>
+  <p> Connect</p>
+  <p> links
+
+  </p>
+
+</div>
 </footer>
 
 </body>
