work on flexbox issue body 2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="headerObjects">
    <h1>logo</h1>
    <p>icon </p>
-   <p>list</p>
+   <button class="headerBtn"> Click Me</button>
    </div>
     </header>
 <section class="mainInfo">
@@ -20,14 +20,34 @@
    <div class="titleBox">
 <h2 class="titleOfPage">Title Of The Page</h2>
 <p>a quick description of the page and mote text </p>
+<button> Click ME</button>
    </div>
+
    
  </div>
+
  <div class="sectionTwo">
-    <p></p>
- </div>
+   <div class="sectionTwoBoxOne">
+   <h3>title</h3>
+
+   <div class="ImageContainer">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7NaVbE4WNNbojOdEwPQjBLx1IRqHLUrC7mw&usqp=CAU" alt="">
+    </div>
+    <p>here is text</p>
+    </div>
+
+
+      <div class="SectionTwoBoxTwo">
+      <h3>title</h3>
+      <div class="ImageContainerTWO">
+       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7NaVbE4WNNbojOdEwPQjBLx1IRqHLUrC7mw&usqp=CAU" alt="">
+      </div>
+       <p>here is text</p>
+       </div>
+       </div>
+
  <div class="sectionThree">
-    <p></p>
+   <button>Click ME</button>
  </div>
  <div class="sectionFour">
     <p></p>
@@ -39,6 +59,11 @@
 </section>
 
 <footer> 
+   <div class="logos"> 
+      <p>FB</p> 
+      <p>IG</p>
+   </div>
+  <div class="footerSectionTwo">
  <div>
    <p>About us</p>
    <p>About us</p>
@@ -47,22 +72,16 @@
 
    
 </div>
-<div>
-  <p>More Info</p>
-  <p>More Info</p>
-  <p>More Info</p>
-  <p>More Info</p>
 
-</div>
 <div>
   <p> Connect</p>
   <p> Connect</p>
   <p> Connect</p>
   <p> Connect</p>
-  <p> links
 
   </p>
 
+</div>
 </div>
 </footer>
 
