page freshened up

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <div class="sectionOne">
    <div class="titleBox">
 <h2 class="titleOfPage">Title Of The Page</h2>
-<p>a quick description of the page and mote text </p>
+<p>a quick description of the page and mote text more text and more text and noe this is a whole paragraph isnt it cool oooo wow this is cool</p>
 <button> Click ME</button>
    </div>
 
@@ -47,13 +47,23 @@
        </div>
 
  <div class="sectionThree">
+   <div class="ImageContainerThree"> <img src="https://tse1.mm.bing.net/th?id=OIP.E-SvE2dghzPugagznJyI8wHaE8&pid=Api&P=0&h=220" alt="">
+   </div>
+   <div class="sectionThreeText">
+      <h2> About us</h2>
+      <p> words about us more words more words bla bla bla keeping the convo going</p>
    <button>Click ME</button>
+
+
  </div>
+</div>
+
  <div class="sectionFour">
-    <p></p>
- </div>
- <div class="sectionFive">
-    <p></p>
+    <div class="sectionFourText">
+      <h2>#ConnectWithUs</h2>
+ <p> see whats happening with us bhy following us on our social media accounts</p>
+ <button> Follow Us</button>
+    </div>
  </div>
 
 </section>
